fix(meter): prevent overflow in track container

--- a/packages/ods-react/src/components/meter/src/components/meter/meter.module.scss
+++ b/packages/ods-react/src/components/meter/src/components/meter/meter.module.scss
@@ -9,6 +9,7 @@
     background-color: var(--ods-theme-track-background-color);
     width: 100%;
     height: 8px;
+    overflow: hidden;
 
     &::after {
       position: absolute;
